--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.techelevator</groupId>
-    <artifactId>Home Inventory</artifactId>
+    <artifactId>homeinventory</artifactId>
     <version>1.0</version>
 
     <properties>
