--- a/vue/.env
+++ b/vue/.env
@@ -1,1 +1,4 @@
 VITE_REMOTE_API=http://localhost:9000
+
+# checking to see if this actually gets removed from the commits folloing the updated 
+# gitignore file
