--- a/vue/.env
+++ b/vue/.env
@@ -2,3 +2,5 @@ VITE_REMOTE_API=http://localhost:9000
 
 # checking to see if this actually gets removed from the commits folloing the updated 
 # gitignore file
+
+# this is the newest version 10-/28 at 9:27
