--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
